ui/src/app.scss
$teal: #1cb487;
$primary: $teal;
$blue: #20a7c9;
$info: $blue;
$purple: #360b48;
$secondary: $purple;
$yellow: #c99720;
$green: #20c943;
$red: #c92052;

$enable-shadows: true;
$enable-gradients: true;
$enable-responsive-font-sizes: true;

$font-family-sans-serif: Montserrat,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
$font-family-monospace: 'Fantasque Sans Mono', SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;

@import "bootstrap/scss/bootstrap";

body {
    display: flex;
    flex-direction: column;
    min-height:100%;
}
#app {
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    justify-content: space-between !important;
}

nav.navbar {
    box-shadow: 0 0px 3px 0 $primary;
    border-bottom: 1px solid $primary;
    transition: padding 1s;
    z-index: 2;
}

footer {
    border-top: 3px solid #9332bb;
}

.badge-gray {
    color: #fff;
    background-color: $gray-600;
}

.card-hover:hover {
    background: $gray-100;
}

.text-indent {
    text-indent: 1em;
}

@font-face {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 400;
    src: local('Montserrat Regular'), local('Montserrat-Regular'), url(/fonts/Montserrat.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
    font-display: swap;
}

@font-face {
  font-family: 'Fantasque Sans Mono';
  src: local('Fantasque Sans Mono Bold'),
       url('/fonts/FantasqueSansMono-Bold.woff2') format('woff2'),
       url('/fonts/FantasqueSansMono-Bold.woff') format('woff');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Fantasque Sans Mono';
  src: local('Fantasque Sans Mono BoldItalic'),
       url('/fonts/FantasqueSansMono-BoldItalic.woff2') format('woff2'),
       url('/fonts/FantasqueSansMono-BoldItalic.woff') format('woff');
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: 'Fantasque Sans Mono';
  src: local('Fantasque Sans Mono Italic'),
       url('/fonts/FantasqueSansMono-Italic.woff2') format('woff2'),
       url('/fonts/FantasqueSansMono-Italic.woff') format('woff');
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: 'Fantasque Sans Mono';
  src: local('Fantasque Sans Mono'),
       local('Fantasque Sans Mono Regular'),
       url('/fonts/FantasqueSansMono-Regular.woff2') format('woff2'),
       url('/fonts/FantasqueSansMono-Regular.woff') format('woff');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@each $breakpoint in map-keys($grid-breakpoints) {
    @include media-breakpoint-up($breakpoint) {
        $infix: breakpoint-infix($breakpoint, $grid-breakpoints);

        .text#{$infix}-left   { text-align: left !important; }
        .text#{$infix}-right  { text-align: right !important; }
        .text#{$infix}-center { text-align: center !important; }
    }
}

